tests/snapshots/integration__integration_tests__remove__pre_remove_hook_template_variables.snap
---
source: tests/integration_tests/remove.rs
assertion_line: 28
info:
  program: wt
  args:
    - remove
    - "--no-background"
    - feature-templates
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRemoving [1mfeature-templates[22m worktree...[39m
🔄 [36mRunning project pre-remove [1mbranch[22m:[39m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Branch: feature-templates'[0m[2m
[0mBranch: feature-templates
🔄 [36mRunning project pre-remove [1mworktree[22m:[39m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Worktree: [REPO].feature-templates'[0m[2m
[0mWorktree: [REPO].feature-templates
🔄 [36mRunning project pre-remove [1mworktree_name[22m:[39m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Name: repo.feature-templates'[0m[2m
[0mName: repo.feature-templates
✅ [32mRemoved [1mfeature-templates[22m worktree & branch (same commit as main)[39m
