tests/snapshots/integration__integration_tests__remove__remove_default_branch_no_tautology.snap
---
source: tests/integration_tests/remove.rs
assertion_line: 640
info:
  program: wt
  args:
    - remove
    - "--no-background"
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRemoving [1mmain[22m worktree...[39m
✅ [32mRemoved [1mmain[22m worktree & branch[39m
